dvwa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvwa
  labels:
    app: dvwa
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dvwa
