dvwa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvwa-ingress
  namespace: default  # Use your namespace if different
  annotations: 
    nginx.org/server-snippets: | 
      location ~* "(\'|\")(.*)(drop|insert|md5|select|union)" { 
          deny all; 
      } 
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-modsecurity-crs: "true"

spec:
  ingressClassName: nginx
  rules:
  - host: dvwa.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dvwa
            port:
              number: 80
