allow-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
      app: nginx-ingress
  policyTypes:
  - Egress
  egress:
  - {}
